{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "d4f3c1d3-f4b2-4c87-b7d9-eb41496ac3c4",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "fecd38cb-1393-41f9-8e31-03ae19ce0aab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Plus",
                    "type": "Button",
                    "id": "164e9584-b530-4b84-ac56-ab0f4cc12f30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "63d5e6e0-9c11-49e8-9bd5-b91d78c7f0d3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "62aff2dc-d615-4823-add3-f3309be68c33",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "9c4c0e92-d279-4a31-a41f-1b5a86ff261a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "750855a6-4233-427d-bed4-7f2c1b21d2ce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a05fa33a-9a0e-432f-84dc-1acd78a6b150",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Plus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9736e674-bede-427f-9af6-a4b6ed6e8bd6",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "838fbf9f-3f73-49fc-b5fa-6742e8d7c78b",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a42a638c-5f3c-4b1e-a9f4-cfaaffda3a17",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}